# Kmernator

./: .cproject  .gitignore  .project  CMakeLists.txt  COPYING  INSTALL  README.md  README.txt  build_kmernator.sh  cmake-flags  makeVersionFile.cmake  make_version.pl  override.cmake  samtools_CMakeLists.txt  version.h.in
apps/: BamSort-P.cpp  CMakeLists.txt  CompareSpectrums.cpp  ContigExtender.cpp  DistributedNucleatingAssembler.cpp  EstimateSize-P.cpp  EstimateSize.R  Fastq2Fasta.cpp  Fastq2FastaQual.cpp  FilterAndSortSam.c  FilterReads-P.cpp  FilterReads.cpp  FilterReads.h  FilterReadsTemplate.h  FixPair.cpp  MPIBroadcastStream.cpp  MeraculousCounter.cpp  MergeIndexPartitionedBam-P.cpp  RandomlySample.cpp  SplitSequenceOnTheFly.cpp  TestMPI.c  TestMPI.cpp  TnfDistance.cpp  pipebuf.c
opt/: .placeholder
src/: .gitattributes  BgzfStream.h  BroadcastOstream.h  CMakeLists.txt  Cap3.h  ContigExtender.h  DistributedFunctions.h  DistributedOfstreamMap.h  DuplicateFragmentFilter.h  EstimateSize.R  ExternalAssembler.h  FilterKnownOddities.h  Kmer.cpp  Kmer.h  KmerAlign.h  KmerMatch.h  KmerReadUtils.h  KmerSpectrum.h  KmerTrackingData.h  LRUCache.h  Log.cpp  Log.h  MPIBase.h  MPIBuffer.h  MPIUtils.h  MatcherInterface.h  MemoryBufferStream.h  MemoryUtils.h  Meraculous.h  MmapTempFile.h  Newbler.h  Options.h  ReadFileReader.h  ReadSelector.h  ReadSet.cpp  ReadSet.h  SamUtils.h  Sequence.cpp  Sequence.h  TwoBitSequence.cpp  (+8 more)
test/: 10-cs18.1.fastq  10-cs18.1.std.fastq  10-cs18.2.fastq  10-cs18.2.std.fastq  10-cs18.fastq  10-cs18.std.fastq  10.fasta  10.fastq  10.qual  1000-Filtered-0.85.fastq  1000-Filtered-0.85.std.fastq  1000-Filtered-readlength-both.fastq  1000-Filtered-readlength-both.std.fastq  1000-Filtered-readlength.fastq  1000-Filtered-readlength.std.fastq  1000-Filtered.fastq  10k.bam  5.fa  BgzfStreamTest.cpp  CMakeLists.txt  HashTester.cpp  KmerTest.cpp  MmapTempFileTest.cpp  ReadSetStdTest.cpp  ReadSetTest.cpp  SamUtilsTest.cpp  SamUtilsTest.sh  SaturateMPI.cpp  TestForkDaemonMPI.cpp  TestForkDaemonMPI.sh  TestKmerMatchMPI.cpp  TestMPI.cpp  TwoBitSequenceTest.cpp  UtilTest.cpp  consensus1.fastq  consensus2-diff.fastq  consensus2-diff.std.fastq  consensus2.fastq  consensus2.std.fastq  consensus3.fastq  (+18 more)
